--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Mitr:wght@300;400;500;600;700&display=swap');
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Mitr', sans-serif;
     background-color: #f4f4f4;
     margin: 0;
     padding: 0;
@@ -89,4 +91,15 @@ button[type="submit"]:hover {
     background-color: #f8d7da;
     color: #721c24;
     border: 1px solid #f5c6cb;
+}
+
+.product-thumbnail {
+    transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+    cursor: pointer;
+}
+
+.product-thumbnail:hover {
+    transform: scale(1.2); /* Adjust zoom level as needed */
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+    z-index: 10; /* Ensure it appears above other elements */
 }
